--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -190,6 +190,7 @@ img {
 .nav_logo,
 .nav_toggle {
   color: var(--title-color);
+  font-size: var(--font-medium);
   font-weight: var(--font-medium);
   cursor: pointer;
 }
@@ -234,7 +235,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: var(--small-font-size);
+  font-size: var(--font-medium);
   color: var(--title-color);
   font-weight: var(--font-medium);
 
@@ -316,6 +317,8 @@ img {
   transform: rotate(180deg);
   color: var(--text-color);
   align-self: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
 }
 .home_blob{
   width: 200px;
