--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1419,3 +1419,40 @@ img {
   font-size: 35px;
   color: #001a2e;
 }
+
+.preloader{
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #312b4d;
+  z-index: 1000;
+}
+.preloader:before{
+  content: 'Please Wait';
+  text-align: center;
+  justify-content: center;
+  position: absolute;
+  font-weight: 500;
+  font-size: 5em;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, .03);
+}
+.counter{
+  position: fixed;
+  color: #fff;
+  font-size: 4em;
+  font-weight: 10;
+  z-index: 1;
+}
+.counter:after{
+  font-size: 0.5em;
+}
+.hide{
+  opacity: 0;
+  transition: 1s;
+  pointer-events: none;
+}
