--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1441,9 +1441,18 @@ img {
   text-transform: uppercase;
   color: rgba(255, 255, 255, .03);
 }
+.loader{
+  position: absolute;
+  background: #fff;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
 .counter{
   position: fixed;
   color: #fff;
+  text-align: center;
+  justify-content: center;
   font-size: 4em;
   font-weight: 10;
   z-index: 1;
