--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,7 +136,7 @@ img {
 
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
-  padding: 3rem 0 7rem;
+  padding: 4rem 0 7rem;
 }
 
 .section__title {
@@ -306,6 +306,9 @@ img {
   color: var(--first-color-alt);
 
 }
+.home_social-icon:hover{
+  color: var(--first-color-lighter);
+}
 
 .social_title{
   top: 120%;
@@ -363,6 +366,7 @@ img {
 .home_scroll-button{
   color: var(--first-color);
   transition: .3s;
+  transform: translateY(-5rem);
 }
 
 .home_scroll-button:hover{
@@ -1214,7 +1218,7 @@ img {
     margin: 0;
   }
   .section{
-    padding: 6rem 0 6rem;
+    padding: 6.1rem 0 6rem;
   }
   .section_subtitle{
     margin-bottom: 4rem;
@@ -1229,7 +1233,7 @@ img {
     padding: 0 1rem;
   }
   .nav{
-    height: calc(var(--header-height) + 1.5rem);
+    height: calc(var(--header-height) + 1.2rem);
     column-gap: 1rem;
   }
   .nav_icon,
@@ -1439,29 +1443,25 @@ img {
   font-weight: 500;
   font-size: 5em;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, .03);
-}
-.loader{
-  position: absolute;
-  background: #fff;
-  height: 100%;
-  top: 0;
-  left: 0;
+  color: rgba(255, 255, 255, .09);
 }
 .counter{
-  position: fixed;
+  position: absolute;
   color: #fff;
   text-align: center;
   justify-content: center;
   font-size: 4em;
+  font-family: 'Poppins';
   font-weight: 10;
-  z-index: 1;
+}
+.loader{
+  position: absolute;
+  background: #8e00b1;
+  height: 100%;
+  mix-blend-mode: difference;
+  top: 0;
+  left: 0;
 }
 .counter:after{
   font-size: 0.5em;
-}
-.hide{
-  opacity: 0;
-  transition: 1s;
-  pointer-events: none;
 }
